# pdclib

./: CMakeLists.txt
functions/_PDCLIB/: _PDCLIB_atomax.c  _PDCLIB_bigint_mant.c  _PDCLIB_bigint_shl.c  _PDCLIB_bigint_tostring.c  _PDCLIB_digits.c  _PDCLIB_load_lc_collate.c  _PDCLIB_load_lc_ctype.c  _PDCLIB_load_lc_messages.c  _PDCLIB_load_lc_monetary.c  _PDCLIB_load_lc_numeric.c  _PDCLIB_load_lc_time.c  _PDCLIB_load_lines.c  _PDCLIB_print.c  _PDCLIB_print_fp.c  _PDCLIB_print_integer.c  _PDCLIB_print_string.c  _PDCLIB_scan.c  _PDCLIB_strtod_main.c  _PDCLIB_strtok.c  _PDCLIB_strtox_main.c  _PDCLIB_strtox_prelim.c
functions/_dlmalloc/: malloc.c
functions/_tzcode/: _PDCLIB_tzload.c  _PDCLIB_tzparse.c  _PDCLIB_tzset_unlocked.c
functions/inttypes/: imaxdiv.c
functions/locale/: localeconv.c  setlocale.c
functions/stdio/: fgetpos.c  fgets.c  fread.c  fseek.c  fwrite.c  perror.c  puts.c  remove.c  rename.c  tmpfile_s.c  tmpnam.c  ungetc.c
functions/stdlib/: abs.c  div.c  labs.c  ldiv.c  llabs.c  lldiv.c  qsort.c  qsort_s.c
functions/string/: memchr.c  memcmp.c  memcpy.c  memcpy_s.c  memmove.c  memmove_s.c  memset.c  memset_s.c  strcat.c  strcat_s.c  strcmp.c  strcoll.c  strcpy.c  strcpy_s.c  strerror_s.c  strerrorlen_s.c  strlen.c  strncat_s.c  strtok.c  strtok_s.c  strxfrm.c
functions/time/: asctime.c  asctime_s.c  ctime.c  ctime_s.c  strftime.c
include/: stdlib.h  string.h
include/pdclib/: _PDCLIB_glue.h  _PDCLIB_internal.h
platform/xbox/functions/_PDCLIB/: _PDCLIB_Exit.c  _PDCLIB_changemode.c  _PDCLIB_close.c  _PDCLIB_fillbuffer.c  _PDCLIB_flushbuffer.c  _PDCLIB_open.c  _PDCLIB_realpath.c  _PDCLIB_remove.c  _PDCLIB_rename.c  _PDCLIB_seek.c  assert.c
platform/xbox/functions/signal/: raise.c  signal.c
platform/xbox/functions/stdio/: tmpfile.c
platform/xbox/functions/stdlib/: getenv.c  getenv_s.c  system.c
platform/xbox/functions/time/: clock.c  time.c  timespec_get.c
platform/xbox/include/pdclib/: _PDCLIB_config.h
